Wed May 10 14:55:43 2000  Brian Gough  <bjg@network-theory.co.uk>

	* gsl-randist.c (main): fixed bug for lognormal (it was calling
 	exppow)  Tadhg O'Meara <tadhg@net-cs.ucd.ie>

	* gsl-randist.c (main): print out all the dimensions for dir-nd,
 	not just the first

Tue Apr 25 20:45:14 2000  Brian Gough  <bjg@network-theory.co.uk>

	* shuffle.c (gsl_ran_sample): lifted the restriction that sampling
 	with replacement could only be done less than n times for n objects.

Tue Mar 14 21:31:46 2000  Brian Gough  <bjg@network-theory.co.uk>

	* logistic.c (gsl_ran_logistic_pdf): prevent overflow in
 	computation of pdf for x < 0

Thu Oct  7 12:55:40 1999  Brian Gough  <bjg@network-theory.co.uk>

	* discrete.c (gsl_ran_discrete_free): removed unreachable code
 	"return 0";

Fri Aug  6 16:02:08 1999  Brian Gough  <bjg@network-theory.co.uk>

	* sphere.c (gsl_ran_dir_nd): number of dimensions is now unsigned
 	(size_t)

	* logarithmic.c (gsl_ran_logarithmic_pdf): removed warning about
 	passing arg 2 of `pow' as floating rather than integer due to
 	prototype

Sun Aug  1 20:29:43 1999  Brian Gough  <bjg@network-theory.co.uk>

	* discrete.c: converted to GSL_ERROR macros for error handling

Tue Jul 27 14:14:38 1999  Brian Gough  <bjg@network-theory.co.uk>

	* sphere.c (gsl_ran_dir_3d): use the Knop method only -- it is the
 	best.
	(gsl_ran_dir_2d_trig_method): split out the trig method as an
 	alternative for those platforms where it is faster

	* bigauss.c: split out the bivariate gaussian into its own source
	file

1999-06-30  Mark Galassi  <rosalia@lanl.gov>

	* discrete.c: (thanks to Frederick W. Wheeler
	<wheeler@cipr.rpi.edu>) changed the type stack_t to gsl_stack_t to
	avoid a conflict on HPUX.

Sun Feb 28 20:41:18 1999  Brian Gough  <bjg@netsci.freeserve.co.uk>

	* gsl-randist.c (main): change cfree() to free(), which is
 	standard.

	* discrete.c (gsl_ran_discrete_preproc): removed warning, pTotal
 	is now initialized to zero.
