@@ -75,3 +75,5 @@ functions
 * Vladimir Kushnir <vkushnir@Alfacom.net> for ieee support for FreeBSD
 
 * F J Franklin <MEP95JFF@sheffield.ac.uk> for test reports and debugging
+
+* Keith Briggs <briggsk@info.bt.co.uk> for bug reports
